--- a/ak4951_ctrl/ak4951_ctrl/ak4951_ctrl.vcxproj
+++ b/ak4951_ctrl/ak4951_ctrl/ak4951_ctrl.vcxproj
@@ -157,6 +157,14 @@
     <ClInclude Include="..\..\3rdparty\imgui\include\imstb_rectpack.h" />
     <ClInclude Include="..\..\3rdparty\imgui\include\imstb_textedit.h" />
     <ClInclude Include="..\..\3rdparty\imgui\include\imstb_truetype.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="resource1.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ak4951_ctrl.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="al4951_ctrl.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
