--- a/ak4951_ctrl/ak4951_ctrl/ak4951_ctrl.vcxproj.filters
+++ b/ak4951_ctrl/ak4951_ctrl/ak4951_ctrl.vcxproj.filters
@@ -71,5 +71,21 @@
     <ClInclude Include="..\..\3rdparty\imgui\include\imstb_truetype.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ak4951_ctrl.rc">
+      <Filter>リソース ファイル</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="al4951_ctrl.ico">
+      <Filter>リソース ファイル</Filter>
+    </Image>
   </ItemGroup>
 </Project>
